# wifi_debugger

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32s3  sdkconfig.esp32  sdkconfig.esp32c3
components/blocking_queue/include/: blocking_queue.hpp
components/debug_console/: CMakeLists.txt  console.cpp  console_s3.cpp  log_console_out.cpp  pyocd_io_console.cpp  pyocd_io_uart.cpp  uart_bypass.cpp
components/debug_console/include/: console.hpp  console_s3.hpp  log_console_out.hpp  pyocd_io_console.hpp  pyocd_io_uart.hpp  uart_bypass.hpp
components/esp-idf-cpp/: CMakeLists.txt  console.cpp  sw_timer.cpp
components/esp-idf-cpp/include/: console.hpp  sw_timer.hpp
components/espressif__esp_tinyusb/: idf_component.yml
components/espressif__tinyusb/: .component_hash
components/file_server/: CMakeLists.txt  Kconfig.projbuild  file_server.c
components/fs_manager/: CMakeLists.txt  fs_manager.cpp  sdcard.cpp
components/fs_manager/include/: file.hpp  fs_manager.hpp  sdcard.hpp
components/io/: CMakeLists.txt  button.cpp  led.cpp  status.cpp
components/io/include/: button.hpp  (+2 more)
components/led/: CMakeLists.txt  led.cpp  status.cpp
components/logger/: CMakeLists.txt  Kconfig.projbuild  cmd.cpp  component.mk  debug_msg_handler.cpp  file_server.cpp  log_file.cpp  logger.cpp  logger_web.cpp  msg_proxy.cpp  root.html  sdcard.cpp  setting.cpp  task.cpp  uart.cpp
components/logger/include/: cmd.hpp  debug_msg_handler.hpp  file_server.hpp  log_file.hpp  logger.hpp  logger_web.hpp  msg_proxy.hpp  sdcard.hpp  setting.hpp  task.hpp  uart.hpp
components/networ_manager/: CMakeLists.txt  network_manager.cpp
components/ocd/: CMakeLists.txt  ocd.cpp  ocd.hpp
components/ocd/flash_writer/include/: flash_algo.hpp  flash_writer.hpp  target.hpp
components/ocd/flash_writer/src/: flash_algo.cpp  flash_writer.cpp
components/ocd/include/: ocd.hpp
components/ocd/libs/socket/: socket.cpp
components/ocd/pyocd_server/include/: pyocd_io.hpp  pyocd_io_socket.hpp  pyocd_server.hpp
components/ocd/pyocd_server/src/: pyocd_io_socket.cpp  pyocd_server.cpp
components/ocd/src/: ocd.cpp
components/ocd/swd/include/: dap.hpp  debug_cm.h  gpio_swd.hpp  swd.hpp
components/ocd/swd/src/: spi_swd.cpp  swd.cpp
components/ota/: CMakeLists.txt  bin_upload.cpp  ota.cpp
components/provisioning/: CMakeLists.txt  Kconfig.projbuild  provisioning_manager.cpp
components/pyocd_probe_server/: CMakeLists.txt  gpio_swd.cpp  pyocd_server.cpp
components/pyocd_probe_server/dap_link/include/: flash_algo.hpp  target.hpp  target_config.h  target_flash.hpp
components/pyocd_probe_server/dap_link/src/: flash_algo.cpp  target.cpp  target_flash.cpp
components/pyocd_probe_server/flash_writer/include/: flash_algo.hpp
components/pyocd_probe_server/flash_writer/src/: flash_algo.cpp
components/pyocd_probe_server/include/: gpio_swd.hpp  pyocd_server.hpp  swd.hpp
components/pyocd_probe_server/pyocd_server/include/: MockArduino.h  gpio_swd.hpp  pyocd_probe.hpp  pyocd_server.hpp  spi_swd.hpp  swd.hpp
components/pyocd_probe_server/pyocd_server/libs/socket/: socket.cpp  socket.hpp
components/pyocd_probe_server/pyocd_server/src/: gpio_swd.cpp  pyocd_probe.cpp  pyocd_server.cpp  spi_swd.cpp  swd.cpp
components/pyocd_probe_server/swd/include/: gpio_swd.hpp  spi_swd.hpp  swd.hpp
components/pyocd_probe_server/swd/src/: dap.cpp  swd.cpp
components/smart_config/: CMakeLists.txt  Kconfig.projbuild  smart_config.cpp
components/storage/: CMakeLists.txt  fs_manager.cpp  sdcard.cpp  setting.cpp
components/telnet/: CMakeLists.txt  telnet.c  telnet.cpp  uart.cpp
components/uart/: CMakeLists.txt  uart.c  uart.cpp
components/web_server/: CMakeLists.txt  web_server.cpp
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c  main.cpp  smart_config.cpp  smart_config.hpp
schematic/wifi_debugger/: wifi_debugger.kicad_prl  wifi_debugger.kicad_pro  wifi_debugger.kicad_sch
(+16 files in other folders)
